Fix link balloon layout issue

--- a/packages/ckeditor5-coremedia-link/theme/contentlinkview.css
+++ b/packages/ckeditor5-coremedia-link/theme/contentlinkview.css
@@ -47,6 +47,10 @@
  * FORM VIEW
  */
 
+.ck.cm-ck-link-form-view .cm-ck-content-link-view > .ck.ck-button__label {
+  width: 106px;
+}
+
 .ck.cm-ck-link-form-view .cm-ck-content-link-view-wrapper {
   position: relative;
   margin-left: 0 !important;
